# MLOps-Task

./: .env.template  .gitignore  Dockerfile  README.md  ameriabank-ml  dagster.yaml  docker-compose.yml  main.py  proto_data_eng_mbd.ipynb  pyproject.toml  task_description.md
.dg/: telemetry.yaml
.dg/.telemetry/: id.yaml
.github/workflows/: ci.yml
data/src/Ameriabank/data/: bank.duckdb.wal
helm/: values.yaml
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
src/Ameriabank/: __init__.py  definitions.py
src/Ameriabank/defs/: assets.py  date_check.py  jobs.py  partitions.py  resources.py  schedules.py
src/Ameriabank/defs/assets/: assets.py  constants.py
src/Bank/: definitions.py
src/Bank/defs/: resources.py
src/Bank/defs/assets/: assets.py  constants.py
tests/: test_definitions.py
